@@ -33,7 +33,7 @@
 
       "lblDisableAfkButton": {
         "type": "label",
-        "position": [120, 110],
+        "position": [160, 120],
         "hAnchor": "right",
         "color": "lightgray",
         "translationKey": "settings.plugins.afk.button_disabled"
@@ -41,7 +41,7 @@
 
       "btnDisableAfkButton": {
         "type": "button",
-        "position": [130, 110],
+        "position": [170, 120],
         "checkable": true,
         "checked": false,
         "base": "/interface/crafting/checkboxnocheck.png",
@@ -51,30 +51,50 @@
         "callback": "disableAFKButton"
       },
 
+      "lblIgnoreMouse": {
+        "type": "label",
+        "position": [160, 105],
+        "hAnchor": "right",
+        "color": "lightgray",
+        "translationKey": "settings.plugins.afk.ignore_mouse"
+      },
+
+      "btnIgnoreMouse": {
+        "type": "button",
+        "position": [170, 105],
+        "checkable": true,
+        "checked": false,
+        "base": "/interface/crafting/checkboxnocheck.png",
+        "hover": "/interface/crafting/checkboxnocheck.png",
+        "baseImageChecked": "/interface/crafting/checkboxcheck.png",
+        "hoverImageChecked": "/interface/crafting/checkboxcheck.png",
+        "callback": "toggleIgnoreMouse"
+      },
+
 
       "lblAfk": {
         "type": "label",
-        "position": [103, 90],
+        "position": [103, 85],
         "value": "",
         "hAnchor": "right",
         "translationKey": "settings.afk_mode"
       },
       "afkTimerSpinner" : {
         "type": "spinner",
-        "position" : [105, 90],
+        "position" : [105, 85],
         "upOffset" : 20,
         "callback": "afkTimerSpinner"
       },
       "lblAfkTimer": {
         "type": "label",
-        "position": [120, 90],
+        "position": [120, 85],
         "value": "",
         "hAnchor": "mid"
       },
       
       "lblAfkTimerMin": {
         "type": "label",
-        "position": [137, 90],
+        "position": [137, 85],
         "value": "",
         "hAnchor": "left",
         "translationKey": "settings.afk_min"
@@ -82,7 +102,7 @@
       
       "lblAfk0Warning": {
         "type": "label",
-        "position": [120, 75],
+        "position": [120, 70],
         "hAnchor": "mid",
         "color": "lightgray",
         "value": "",
